k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reasonable-store
  labels:
    app: reasonable-store
